--- a/main/style.css
+++ b/main/style.css
@@ -9,8 +9,8 @@ body {
 header {
   width: 100vw;
   height: 50px;
+  margin-left: 250px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   position: fixed;
 }
@@ -18,6 +18,7 @@ header img {
   width: 43px;
 }
 .menu {
+  margin-left: 910px;
   width: 20%;
 }
 ul {
