--- a/goal/goal.css
+++ b/goal/goal.css
@@ -1,72 +1,95 @@
 * {
-  box-sizing: border-box;
-}
-
-body,
-h1,
-h6 {
   margin: 0;
+  padding: 0;
 }
-
 body {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.wrapper {
+  margin-bottom: 130px;
+}
+.goal-wrapper {
+  width: 70%;
+  height: 200px;
+  margin-top: 100px;
+  margin-right: 15%;
+  margin-left: 15%;
 }
 
-.wrapper {
-  width: 900px;
-  height: 600px;
+.goal-container {
+  height: 250px;
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
 }
-
-.wrapper > div {
+.goal-box {
+  background-color: black;
+  height: 100%;
   width: 250px;
-  height: 250px;
-  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 20px;
+
   transition: all 0.5s linear;
   transform-style: preserve-3d;
 }
-
-.financial-app {
-  background-color: #f9d29d;
-  background-image: linear-gradient(315deg, #f9d29d 0%, #ffd8cb 74%);
-}
-
-.graphic-design {
-  background-color: #deebdd;
-  background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
-}
-
-.artifact-model {
-  background-color: #f6f0c4;
-  background-image: linear-gradient(315deg, #f6f0c4 0%, #d99ec9 74%);
-}
-
-.operating-system {
-  background-color: #e4eee9;
-  background-image: linear-gradient(315deg, #e4eee9 0%, #93a5ce 74%);
-}
-
-.business-card {
-  background-color: #f3e6e8;
-  background-image: linear-gradient(315deg, #f3e6e8 0%, #d5d0e5 74%);
-}
-
-.centered-design {
-  background-color: #e7eff9;
-  background-image: linear-gradient(315deg, #e7eff9 0%, #cfd6e6 74%);
-}
-
-.wrapper > div:hover {
+.goal-box:hover {
   transform: rotateY(180deg);
 }
-
+.goal-img i {
+  font-size: 130px;
+  margin-bottom: 20px;
+  color: white;
+}
+.mentoring {
+  background: #c6ffdd; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f7797d, #fbd786, #c6ffdd); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(45deg, #f7797d, #fbd786, #c6ffdd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.seminar {
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
+}
+.backend {
+  background-color: #74ebd5;
+  background-image: linear-gradient(225deg, #74ebd5 0%, #9face6 100%);
+}
+.team {
+  background-color: #fbda61;
+  background-image: linear-gradient(45deg, #fbda61 0%, #ff5acd 100%);
+}
+.session {
+  background-color: #fa8bff;
+  background-image: linear-gradient(45deg, #fa8bff 0%, #2bd2ff 52%, #2bff88 90%);
+}
+.study {
+  background: #ef32d9; /* fallback for old browsers */
+  background: linear-gradient(223deg, #89fffd, #ef32d9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.goal-text {
+  color: white;
+}
+.fa-user-group {
+  color: #fffb7d;
+}
+.fa-chalkboard-user {
+  color: #85ffbd;
+}
+.fa-server {
+  color: #8ec5fc;
+}
+.fa-people-group {
+  color: #e0c3fc;
+}
+.fa-microphone-lines {
+  color: #ff99ac;
+}
+.fa-computer {
+  color: #ff6a88;
+}
 .front,
 .back {
   width: 100%;
@@ -87,17 +110,14 @@ body {
   cursor: pointer;
 }
 .front i {
-  font-size: 70px;
+  font-size: 100px;
   margin-bottom: 10px;
 }
 .front h2 {
+  font-size: 20px;
   margin-bottom: -30px;
 }
 .back h2 {
   display: inline-block;
-  margin-right: 10px;
-}
-
-.back i {
-  font-size: 20px;
+  /* margin-left: 10px; */
 }
