--- a/main/style.css
+++ b/main/style.css
@@ -5,30 +5,40 @@
 body {
   width: 100vw;
   height: 100vh;
+  /* background-color: black; */
+}
+.wrapper {
+  width: 70%;
+  /* height: 100%; */
+  margin-left: 15%;
+  margin-right: 15%;
+  /* background-color: lightcoral; */
+  display: flex;
+  flex-direction: column;
 }
 header {
-  width: 100vw;
-  height: 50px;
-  margin-left: 250px;
+  /* background-color: lightblue; */
   display: flex;
+  /* flex-direction: column; */
+  justify-content: space-between;
   align-items: center;
-  position: fixed;
-}
-header img {
-  width: 43px;
 }
 .menu {
-  margin-left: 910px;
-  width: 20%;
+  /* width: 70px; */
+  display: flex;
+  justify-content: flex-end;
 }
 ul {
   list-style-type: none;
   display: flex;
+  /* background-color: aquamarine; */
   justify-content: space-between;
 }
 li {
+  /* background-color: bisque; */
   display: flex;
   justify-content: space-around;
+  margin-right: 20px;
 }
 li:hover {
   color: blue;
@@ -37,24 +47,7 @@ a {
   text-decoration: none;
   color: inherit;
 }
-/* header end */
-.side-bar {
-  height: 100vh;
-  display: flex;
-  justify-content: space-between;
-}
-.left,
-.right {
-  width: 15%;
-  /* background-color: black; */
-  /* position: fixed; */
-}
-.center {
-  width: calc(100vw - 15%);
-  margin-top: 50px;
-  /* background-color: lemonchiffon; */
-}
-.center iframe {
-  width: 100%;
-  height: 100%;
+
+header img {
+  width: 43px;
 }
