--- a/information/information.css
+++ b/information/information.css
@@ -26,6 +26,7 @@ body {
   font-size: 40px;
 }
 .top .desc {
+  width: 75%;
   margin-top: 15px;
   font-size: 20px;
 }
@@ -84,7 +85,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 70%;
-  margin-top: 70px;
+  margin-top: 100px;
   margin-left: 10px;
   /* margin-right: 30px; */
 }
