--- a/goal/goal.css
+++ b/goal/goal.css
@@ -7,25 +7,29 @@ body {
   height: 100vh;
 }
 .wrapper {
-  margin-bottom: 130px;
+  margin-bottom: 100px;
 }
 .goal-wrapper {
   width: 70%;
-  height: 200px;
-  margin-top: 100px;
+  height: 300px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* margin-top: 100px; */
   margin-right: 15%;
   margin-left: 15%;
+  /* background-color: lightblue; */
 }
 
 .goal-container {
-  height: 250px;
+  height: inherit;
+  /* background-color: #2bff88; */
   width: 100%;
   display: flex;
   justify-content: space-around;
 }
 .goal-box {
-  background-color: black;
-  height: 100%;
+  height: 80%;
   width: 250px;
   display: flex;
   justify-content: center;
@@ -45,9 +49,8 @@ body {
   color: white;
 }
 .mentoring {
-  background: #c6ffdd; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #f7797d, #fbd786, #c6ffdd); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(45deg, #f7797d, #fbd786, #c6ffdd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #c6ffdd;
+  background: linear-gradient(45deg, #f7797d, #fbd786, #c6ffdd);
 }
 .seminar {
   background-color: #85ffbd;
@@ -66,29 +69,8 @@ body {
   background-image: linear-gradient(45deg, #fa8bff 0%, #2bd2ff 52%, #2bff88 90%);
 }
 .study {
-  background: #ef32d9; /* fallback for old browsers */
-  background: linear-gradient(223deg, #89fffd, #ef32d9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-}
-.goal-text {
-  color: white;
-}
-.fa-user-group {
-  color: #fffb7d;
-}
-.fa-chalkboard-user {
-  color: #85ffbd;
-}
-.fa-server {
-  color: #8ec5fc;
-}
-.fa-people-group {
-  color: #e0c3fc;
-}
-.fa-microphone-lines {
-  color: #ff99ac;
-}
-.fa-computer {
-  color: #ff6a88;
+  background: #ef32d9;
+  background: linear-gradient(223deg, #89fffd, #ef32d9);
 }
 .front,
 .back {
@@ -107,7 +89,6 @@ body {
 .back {
   transform: rotateY(180deg);
   align-items: center;
-  cursor: pointer;
 }
 .front i {
   font-size: 100px;
