--- a/style.css
+++ b/style.css
@@ -51,3 +51,9 @@ a {
 header img {
   width: 43px;
 }
+.test-div {
+  width: 100%;
+  height: 300px;
+  font-size: 40px;
+  background-color: #ccc;
+}
