--- a/information/information.css
+++ b/information/information.css
@@ -18,9 +18,7 @@ body {
 }
 .top {
   margin: 200px 50px;
-  /* margin: 305px 50px; */
   flex-direction: column;
-  /* background-color: aliceblue; */
 }
 .top .title {
   font-size: 40px;
@@ -32,16 +30,10 @@ body {
 }
 /* top end */
 .middle {
-  /* width: 500px; */
   justify-content: center;
   align-items: flex-start;
   background-color: #f7f7f7;
 }
-/* .middle .container {
-  width: 800px;
-  background-color: white;
-  display: flex;
-} */
 .middle .title {
   font-size: 40px;
 }
@@ -52,27 +44,24 @@ body {
 .middle .img {
   width: 300px;
   height: 450px;
-  /* margin: 100px 200px; */
   margin-top: 30px;
   margin-left: -200px;
   margin-bottom: 30px;
-  /* background-color: lightcoral; */
 }
 .cover {
   margin-top: 100px;
   margin-left: 20px;
-
-  /* color: white; */
-  /* background-color: lightgreen; */
-  /* margin-top: -350px; */
-  /* padding-right: 100px; */
-  /* margin-left: -100px; */
 }
 /* middle end */
 .bottom {
   /* background-color: lightblue; */
   width: 100%;
-  height: 700px;
+  /* height: 700px; */
+  margin-bottom: 100px;
+}
+.boss {
+  margin-top: 20px;
+  margin-bottom: 30px;
 }
 .boss,
 .main-boss {
