--- a/active/active.css
+++ b/active/active.css
@@ -23,13 +23,16 @@ body {
 }
 
 .activeImg {
-  height: 215px;
+  height: 75%;
+  /* height: 215px; */
+  /* background-color: antiquewhite; */
   padding-bottom: 5px;
 }
 .img-list {
   width: 32%;
   background-color: #f7f7f7;
   padding: 7px;
+  padding-bottom: 15px;
   border-radius: 10px;
   margin-top: 15px;
 }
@@ -57,8 +60,5 @@ body {
   width: 100%;
 }
 .images img {
-  margin-bottom: 15px;
-}
-.blog img {
   margin-bottom: 15px;
 }
