--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 body {
   width: 100vw;
   height: 100vh;
-  /* background-color: black; */
+  /* background-color: #e2fdff; */
+  /* background-color: #f3feffca; */
 }
 .wrapper {
   width: 70%;
