--- a/goal/goal-media.css
+++ b/goal/goal-media.css
@@ -1,53 +1,39 @@
-/* @media (max-width: 900px) {
-  .wrapper {
-    width: 100vw;
-    margin-left: 0;
-    background-color: lightblue;
-  }
-  header {
-    width: 100vw;
-    background-color: lightcoral;
-  }
-  .goal-wrapper {
-    display: flex;
-    justify-content: center;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .goal-container {
-    background-color: blueviolet;
-    flex-direction: column;
-  }
-  .goal-box {
-    height: 90%;
-    margin-bottom: 10px;
-  }
-} */
 @media (max-width: 900px) {
   .wrapper {
-    /* background-color: lightblue; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  header {
-    width: 100vw;
-    justify-content: space-between;
-    align-items: center;
-    /* background-color: lightcoral; */
-  }
-  .goal-wrapper {
-    display: flex;
-    justify-content: center;
+    width: 100%;
     margin-left: 0;
     margin-right: 0;
   }
-  .goal-container {
-    background-color: blueviolet;
+  .cover {
+    /* background-color: aqua; */
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .cover .container {
+    width: 100%;
+    margin-left: 8%;
+    margin-right: 0;
     flex-direction: column;
   }
-  .goal-box {
-    height: 90%;
-    margin-bottom: 10px;
+  .img-list:nth-child(2) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .img-list {
+    width: 80%;
+  }
+  .activeImg {
+    /* width: 100%; */
+    /* height: 0; */
+    height: 10%;
+
+    /* height: 170px; */
+    /* margin-bottom: 50px; */
+    display: flex;
+    justify-content: flex-start;
+  }
+  h1 span {
+    font-size: 10%;
   }
 }
