--- a/notice/notice.css
+++ b/notice/notice.css
@@ -6,9 +6,15 @@ body {
   width: 100vw;
   height: 100vh;
 }
+.main-container {
+  border: 2px solid #8bbaf9;
+  margin-left: 15%;
+  margin-right: calc(15% + 4px);
+  width: calc(70% - 4px);
+  padding-bottom: 30px;
+}
 .cover {
-  width: 100%;
-  margin: 1em auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,11 +22,14 @@ body {
 .button {
   width: 120px;
   height: 35px;
-  margin-top: 0px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  background-color: #ccc;
+  background-color: #8bbaf9;
+  color: #f3f7ff;
+}
+.button:active {
+  background-color: #8bbbf991;
 }
