--- a/active/active.css
+++ b/active/active.css
@@ -1,24 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 * {
   margin: 0;
   padding: 0;
+  font-family: "Nanum Gothic", sans-serif;
 }
 body {
   width: 100vw;
   height: 100vh;
 }
-.wrapper {
-  margin-bottom: 30px;
+.main-container {
+  border: 2px solid #8bbaf9;
+  /* border-bottom: none; */
+  margin-left: 15%;
+  margin-right: 15%;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .container {
   display: flex;
   align-content: space-around;
-  margin-left: 15%;
-  margin-right: 15%;
+  /* margin-left: 15%; */
+  /* margin-right: 15%; */
 }
-.container:nth-child(3) {
-  padding-bottom: 40px;
-}
-
 .activeImg {
   height: 75%;
   /* height: 215px; */
@@ -26,17 +29,19 @@ body {
   padding-bottom: 5px;
 }
 .img-list {
-  width: 32%;
-  background-color: #f7f7f7;
+  width: 30%;
+  background-color: #f3f7ff;
+
+  /* background-color: #f7f7f7; */
   padding: 7px;
   padding-bottom: 15px;
   border-radius: 10px;
-  margin-top: 15px;
+  margin: 15px;
 }
-.img-list:nth-child(2) {
+/* .img-list:nth-child(2) {
   margin-left: 0.3%;
   margin-right: 0.3%;
-}
+} */
 .text .title {
   font-size: 17px;
   color: #5a5a5a;
