--- a/goal/goal-media.css
+++ b/goal/goal-media.css
@@ -4,6 +4,13 @@
     margin-left: 0;
     margin-right: 0;
   }
+  .main-container {
+    margin-left: 0;
+    margin-right: 0;
+    border: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
   .cover {
     /* background-color: aqua; */
     width: 100%;
