--- a/information/info-media.css
+++ b/information/info-media.css
@@ -4,6 +4,11 @@
     margin-left: 0;
     margin-right: 0;
   }
+  .container {
+    width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
+  }
   .top {
     margin: 100px 10px;
   }
