--- a/information/information.css
+++ b/information/information.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 * {
   margin: 0;
   padding: 0;
+  font-family: "Nanum Gothic", sans-serif;
 }
 body {
   width: 100vw;
@@ -11,7 +13,11 @@ body {
   justify-content: center;
   flex-direction: column;
 }
-
+.container {
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
 .top,
 .middle {
   display: flex;
@@ -32,7 +38,7 @@ body {
 .middle {
   justify-content: center;
   align-items: flex-start;
-  background-color: #f7f7f7;
+  background-color: #f3f7ff;
 }
 .middle .title {
   font-size: 40px;
@@ -61,6 +67,9 @@ body {
 }
 .boss {
   margin-top: 20px;
+  margin-bottom: 30px;
+}
+.main-boss {
   margin-bottom: 30px;
 }
 .boss,
