--- a/main-media.css
+++ b/main-media.css
@@ -1,6 +1,14 @@
 @media (max-width: 900px) {
+  section {
+    width: 100%;
+    padding-left: 15%;
+    padding-right: 15%;
+    background-color: black;
+    border: none;
+  }
   .wrapper {
-    /* background-color: lightblue; */
+    width: 100vw;
+    background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,8 +18,5 @@
     justify-content: space-between;
     align-items: center;
     /* background-color: lightcoral; */
-  }
-  .menu {
-    /* background-color: lightcyan; */
   }
 }
