--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -9,20 +10,28 @@ body {
   /* background-color: #f3feffca; */
 }
 .wrapper {
+  background-color: #8bbaf9;
+  /* width: calc(70% + 4px); */
   width: 70%;
-  /* height: 100%; */
+  height: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin-left: 15%;
   margin-right: 15%;
+  /* margin-right: calc(15% - 4px); */
   /* background-color: lightcoral; */
   display: flex;
   flex-direction: column;
 }
 header {
-  /* background-color: lightblue; */
   display: flex;
   /* flex-direction: column; */
   justify-content: space-between;
   align-items: center;
+}
+.logo img {
+  width: 30px;
+  padding-left: 10px;
 }
 .menu {
   /* width: 70px; */
@@ -40,9 +49,10 @@ li {
   display: flex;
   justify-content: space-around;
   margin-right: 20px;
+  font-family: "Itim", cursive;
 }
 li:hover {
-  color: blue;
+  color: #f3f7ff;
 }
 a {
   text-decoration: none;
