--- a/main.css
+++ b/main.css
@@ -1,25 +1,80 @@
+@import url("https://fonts.googleapis.com/css2?family=Itim&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  width: 100vw;
+  height: 100vh;
+}
+.wrapper {
+  background-color: #8bbaf9;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 70%;
+  margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo img {
+  width: 30px;
+  padding-left: 10px;
+}
+.menu {
+  display: flex;
+  justify-content: flex-end;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+li {
+  display: flex;
+  justify-content: space-around;
+  margin-right: 20px;
+  font-family: "Itim", cursive;
+}
+li:hover {
+  color: #f3f7ff;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+header img {
+  width: 43px;
+}
+.test-div {
+  width: 100%;
+  height: 300px;
+  font-size: 40px;
+  background-color: #ccc;
+}
+
 body {
   width: 100%;
   height: 100%;
   overflow-y: hidden;
 }
+@media (max-width: 900px) {
+}
+
+.main-container {
+  width: 100%;
+}
 .wrapper {
   background-color: #8bbaf9;
-  width: calc(70% + 4px);
   height: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 15%;
-  margin-right: calc(15% - 4px);
-  display: flex;
-  flex-direction: column;
-}
-#mast {
-  width: 70%;
-  margin-left: 15%;
-  margin-right: 15%;
-  border: 2px solid #8bbaf9;
-  /* border-right: 1px solid #8bbaf9; */
 }
 button {
   position: fixed;
@@ -69,15 +124,15 @@ button:active i {
   transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mast {
-  position: relative;
+  /* border: 2px solid #8bbaf9; */
+  /* position: relative; */
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  /* color: #f3feff; */
-  color: #e2fdff;
+  /* color: #e2fdff; */
 }
 
 .mast__header {
